# m8-files

./: .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: ci.yml
examples/: read_instrument.rs  read_song.rs
examples/instruments/: FMDUBSTABEQ_4_1.m8i  FMDUBSTAB_4_0.m8i  FMDUBSTAB_4_1.m8i
examples/songs/: README.md  TEST-FILE.m8s  V4-1EMPTY.m8s  V4EMPTY.m8s  note.md
examples/songs/CommandMappingV4/: CMDMAPPING.m8s  CMDMAPPING_4_1_beta.m8s
src/: eq.rs  fx.rs  instrument.rs  lib.rs  reader.rs  remapper.rs  scale.rs  settings.rs  song.rs  songs.rs  theme.rs  version.rs  writer.rs
src/instruments/: common.rs  external_inst.rs  fmsynth.rs  hypersynth.rs  macrosynth.rs  midi.rs  mod.rs  sampler.rs  wavsynth.rs
src/instruments/modulator/: adsr_env.rs  ahd_env.rs  drum_env.rs  lfo.rs  mod.rs  tracking_env.rs  trig_env.rs
