[package]
name = "m8-files"
description = "Parse the Dirtywave M8's file formats"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/AlexCharlton/m8-files"
documentation = "https://docs.rs/m8-files"
homepage = "https://github.com/AlexCharlton/m8-files"
license = "MIT"
keywords = ["music"]

[dependencies]
arr_macro = "0.2.1"
array-concat = "0.5.3"
byteorder = "1.4.3"
num_enum = "0.7.3"

[features]
# Used to fix warnings stemming from array-concat
# This can be removed when this bug is fixed: https://github.com/inspier/array-concat/pull/4
const_panic = []
